# FinSight

./: .env.example  README.md  cli.py  pyproject.toml  requirements.txt
FinSight/src/app/: __init__.py  main.py
FinSight/src/app/api/: __init__.py
FinSight/src/app/api/v1/: routes.py
FinSight/src/app/db/: schema.sql
FinSight/src/app/services/: analytics.py
FinSight/tests/integration/: test_api.py
migrations/: env.py
src/app/: __init__.py  cli.py  main.py
src/app/api/v1/: analytics.py
src/app/core/: config.py  logging.py
src/app/db/: session.py
src/app/models/: models.py
src/app/schemas/: schemas.py
src/app/services/: analytics.py
tests/unit/: test_analytics.py  test_models.py
