[tool.poetry]
name = "FinSight"
version = "0.1.0"
description = "A FastAPI application for financial insights and analytics."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
yfinance = "^0.1.67"
pandas = "^1.3.3"
numpy = "^1.21.2"
sqlalchemy = "^1.4.22"
pydantic = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"